--- a/force-app/main/default/classes/ASF_BulkCsvDownloadHelper_Test.cls
+++ b/force-app/main/default/classes/ASF_BulkCsvDownloadHelper_Test.cls
@@ -13,7 +13,7 @@ public class ASF_BulkCsvDownloadHelper_Test {
 
     @TestSetup
     public static void setupData(){
-         ASF_TestDataFactory.createCaseRecords(1);   
+    	 ASF_TestDataFactory.createCaseRecords(1);   
     }
     
     @isTest
@@ -26,8 +26,8 @@ public class ASF_BulkCsvDownloadHelper_Test {
     private static void getCSVTemplateTest() {
         Test.startTest();
             String result = ASF_BulkCsvController.getCSVTemplate('ABHFL_Create_Case');
-            String resultFalse = ASF_BulkCsvController.getCSVTemplate('test');
-            Assert.areNotEqual(result, '');
+        	String resultFalse = ASF_BulkCsvController.getCSVTemplate('test');
+        	Assert.areNotEqual(result, '');
         Test.stopTest();     
     }
     @isTest
@@ -35,6 +35,14 @@ public class ASF_BulkCsvDownloadHelper_Test {
         Test.startTest();
         Id caseId = [select Id from case LIMIT 1].Id;
          	Object result = ASF_BulkCsvController.generateCSVFileWithData('ABHFL_Create_Case','test',caseId,'__Recent');
+        	Assert.isNotNull(result);
+        Test.stopTest();     
+    }
+    @isTest
+    private static void generateCSVFileWithCtstTest() {
+        Test.startTest();
+        Id caseId = [select Id from case LIMIT 1].Id;
+         	Object result = ASF_BulkCsvController.generateCSVFileWithCtst('ABSLI_Create_Case');
         	Assert.isNotNull(result);
         Test.stopTest();     
     }
@@ -59,7 +67,7 @@ public class ASF_BulkCsvDownloadHelper_Test {
          	String listViewId = ASF_BulkCsvDownloadHelper.getRecentViewID('Case','__Recent');
             ASF_BulkCsvDownload_MockTest mock = new ASF_BulkCsvDownload_MockTest();
             Test.setMock(HttpCalloutMock.class, mock);
-            String resultQuery = ASF_BulkCsvDownloadHelper.getListViewSOQL('Case', listViewId);
+        	String resultQuery = ASF_BulkCsvDownloadHelper.getListViewSOQL('Case', listViewId);
         Test.stopTest();     
     }
 }
