--- a/force-app/main/default/classes/ABSLI_LoanApprovalIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_LoanApprovalIntegration.cls
@@ -186,6 +186,8 @@ public with sharing class ABSLI_LoanApprovalIntegration implements ASF_Integrati
 	 */
 	public void processResponse(ASF_Case_Integration__c caseInteg) {
 		try {
+            Case caseRecord = ABSLI_IntegrationQueryHelper.getCaseInfo(caseInteg.Case__c);
+            ABSLI_Case_Detail__c caseDetail = new ABSLI_Case_Detail__c(Id = caseRecord.ABSLI_Case_Detail__c);
 			if (caseInteg.Status__c == ABSLI_Constants.SUCCESS) {
 				LAResponseWrapper jsonMap = (LAResponseWrapper) JSON.deserialize(
 					caseInteg.Response__c,
@@ -193,17 +195,18 @@ public with sharing class ABSLI_LoanApprovalIntegration implements ASF_Integrati
 				);
 
 				if (jsonMap.lsir_return_cd == '00') {
-					Case caseRecord = ABSLI_IntegrationQueryHelper.getCaseInfo(caseInteg.Case__c);
-					ABSLI_Case_Detail__c caseDetail = new ABSLI_Case_Detail__c(Id = caseRecord.ABSLI_Case_Detail__c);
-
-					//On Case resolution send Email and SMS notification to the customer based on Custom Metdata
-					sendoutEmailSMSNotification(caseRecord);
-
 					caseDetail.Approver_Remarks__c = jsonMap.messages;
                     caseDetail.Voucher_Approval_Date__c = System.today();
 					Database.update(caseDetail, AccessLevel.SYSTEM_MODE);
 				}
 			}
+            if(caseInteg.Status__c == ABSLI_Constants.FAILURE){
+                caseDetail.Status_Valid_For_STP__c = False;
+                Database.update(caseDetail, AccessLevel.SYSTEM_MODE);
+
+                caseRecord.MoveToNext__c = true;
+				Database.update(caseRecord, AccessLevel.SYSTEM_MODE);
+            }
 		} catch (Exception e) {
 			System.debug('@@@mess' + e.getMessage() + ' ' + e.getLineNumber());
 			ABCL_Logger.enableExceptionLogging();
