--- a/force-app/main/default/classes/ABSLI_LoanRegisterIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_LoanRegisterIntegration.cls
@@ -183,6 +183,8 @@ public with sharing class ABSLI_LoanRegisterIntegration implements ASF_Integrati
 	 */
 	public void processResponse(ASF_Case_Integration__c caseInteg) {
 		try {
+            Case caseRecord = ABSLI_IntegrationQueryHelper.getCaseInfo(caseInteg.Case__c);
+			ABSLI_Case_Detail__c caseDetail = new ABSLI_Case_Detail__c(Id = caseRecord.ABSLI_Case_Detail__c);
 			// Succesful Transaction
 			if (caseInteg.Status__c == ABSLI_Constants.SUCCESS) {
 				// Response Processing
@@ -193,11 +195,9 @@ public with sharing class ABSLI_LoanRegisterIntegration implements ASF_Integrati
 
 				if (jsonMap.LSIR_RETURN_CD == '00') {
 					// Update NEFT Ref Number
-					Case caseRecord = ABSLI_IntegrationQueryHelper.getCaseInfo(caseInteg.Case__c);
-					ABSLI_Case_Detail__c caseDetail = new ABSLI_Case_Detail__c(Id = caseRecord.ABSLI_Case_Detail__c);
 					caseDetail.Voucher_Number__c = jsonMap.MIR_ACT_CHQ_VCHR_NUM;
 					caseDetail.Voucher_Date__c = System.today();
-					caseDetail.Next_Integration_Name__c = ABSLI_LoanAssignmentIntegration.class.getName();
+					caseDetail.Next_Integration_Name__c = ABSLI_LoanApprovalIntegration.class.getName();
 					Database.SaveResult result = Database.update(caseDetail, AccessLevel.SYSTEM_MODE);
 
 					if (result.isSuccess()) {
@@ -208,6 +208,13 @@ public with sharing class ABSLI_LoanRegisterIntegration implements ASF_Integrati
 						ASF_IntegrationsController.runIntegration(loanApprovalInt, caseRecord);
 					}
 				}
+			}
+			if (caseInteg.Status__c == ABSLI_Constants.FAILURE) {
+				caseDetail.Status_Valid_For_STP__c = false;
+				Database.update(caseDetail, AccessLevel.SYSTEM_MODE);
+
+				caseRecord.MoveToNext__c = true;
+				Database.update(caseRecord, AccessLevel.SYSTEM_MODE);
 			}
 		} catch (Exception e) {
 			System.debug('@@@mess' + e.getMessage() + ' ' + e.getLineNumber());
